--- a/MyProjects/SightMap.BLL/SightMap.BLL.csproj
+++ b/MyProjects/SightMap.BLL/SightMap.BLL.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="9.0.0" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SightMap.DAL\SightMap.DAL.csproj" />
   </ItemGroup>
 
