--- a/MyProjects/Angular/SportsStore/package.json
+++ b/MyProjects/Angular/SportsStore/package.json
@@ -15,16 +15,17 @@
   "dependencies": {
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.0.0",
-    "@angular/platform-browser": "^4.0.0",
+    "@angular/core": "^8.2.12",
+    "@angular/forms": "^8.2.12",
+    "@angular/http": "^7.2.15",
+    "@angular/platform-browser": "^8.2.12",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "bootstrap": "4.3.1",
     "core-js": "^2.4.1",
     "font-awesome": "4.7.0",
     "jquery": "^3.4.1",
+    "package.json": "^2.0.1",
     "popper.js": "^1.16.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
