Добавление Angular в главный проект

--- a/MyProjects/SightMap/SightMap.csproj
+++ b/MyProjects/SightMap/SightMap.csproj
@@ -2,10 +2,14 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TypeScriptCompileBlocked>true</TypeScriptCompileBlocked>
+    <TypeScriptToolsVersion>Latest</TypeScriptToolsVersion>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+    <PackageReference Include="Microsoft.AspNetCore.SpaServices" Version="3.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.0.0">
       <PrivateAssets>all</PrivateAssets>
@@ -19,5 +23,19 @@
   <ItemGroup>
     <ProjectReference Include="..\SightMap.BLL\SightMap.BLL.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
+  <Target Name="Angular run" AfterTargets="Build">
+    <Message Text="Angular running..."></Message>
+    <Exec Command="npm build"/>
+  </Target>
+
+  <Target Name="Angular run" AfterTargets="Run">
+    <Message Text="Angular running..."></Message>
+    <Exec Command="npm start"/>
+  </Target>
 
 </Project>
