--- a/MyProjects/SightMap/package.json
+++ b/MyProjects/SightMap/package.json
@@ -46,6 +46,6 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.5.3",
-    "tslib": "^1.10.0"
+    "tslib": "1.10.0"
   }
 }
