--- a/MyProjects/SightMap/SightMap.csproj
+++ b/MyProjects/SightMap/SightMap.csproj
@@ -31,7 +31,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\" />
+    <Folder Include="wwwroot\img\" />
   </ItemGroup>
 
   <!--<Target Name="AngularBuild" AfterTargets="Build">
