--- a/MyProjects/SightMap/package.json
+++ b/MyProjects/SightMap/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~8.2.13",
     "@angular/router": "~8.2.13",
     "bootstrap": "4.3.1",
+    "gasparesganga-jquery-loading-overlay": "^2.1.6",
     "jquery": "^3.4.1",
     "peer": "^0.2.10",
     "popper.js": "^1.16.0",
