--- a/MyProjects/SightMap/package.json
+++ b/MyProjects/SightMap/package.json
@@ -25,6 +25,8 @@
     "peer": "^0.2.10",
     "popper.js": "^1.16.0",
     "rxjs": "~6.4.0",
+    "rxjs-compat": "^6.5.3",
+    "ymaps": "^0.2.1",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
@@ -34,7 +36,7 @@
     "@angular/language-service": "~8.2.13",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
+    "@types/node": "^8.9.5",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
