--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 bin/
 obj/
 .user
-
+QA.FileUploader.PLUploader/
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
