--- a/MyProjects/SightMap/SightMap.csproj
+++ b/MyProjects/SightMap/SightMap.csproj
@@ -32,6 +32,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\img\" />
+    <Folder Include="wwwroot\temp\" />
   </ItemGroup>
 
   <!--<Target Name="AngularBuild" AfterTargets="Build">
