--- a/MyProjects/SightMap/package.json
+++ b/MyProjects/SightMap/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "~8.2.13",
     "@angular/platform-browser-dynamic": "~8.2.13",
     "@angular/router": "~8.2.13",
+    "@types/plupload": "^2.0.6",
+    "@types/yandex-maps": "^2.1.8",
     "bootstrap": "4.3.1",
     "gasparesganga-jquery-loading-overlay": "^2.1.6",
     "jquery": "^3.4.1",
@@ -26,9 +28,8 @@
     "popper.js": "^1.16.0",
     "rxjs": "~6.4.0",
     "rxjs-compat": "^6.5.3",
-    "zone.js": "~0.9.1",
     "ymaps": "^0.2.1",
-    "@types/yandex-maps": "^2.1.8"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.16",
