--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 bin/
 obj/
 .user
+wwwroot/
+
 QA.FileUploader.PLUploader/
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
